--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Cory Hardman Coaching</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
 <style>
-    body,
+    body{
+        font-family: sanvito-pro, sans-serif;
+    }
     h1,
     h2,
     h3,
     h4,
     h5,
     h6 {
-        font-family: "Lato", sans-serif;
+            font-family: 'Redressed', cursive;
     }
 
     body,
@@ -36,19 +42,19 @@
 
     /* First image (Logo. Full height) */
     .bgimg-1 {
-        background-image: url('/w3images/parallax1.jpg');
+        background-image: url("../images/lavender_background.jpg");
         min-height: 100%;
     }
 
     /* Second image (Portfolio) */
     .bgimg-2 {
-        background-image: url("/w3images/parallax2.jpg");
+        background-image: url("../images/lavender_background.jpg");
         min-height: 400px;
     }
 
     /* Third image (Contact) */
     .bgimg-3 {
-        background-image: url("/w3images/parallax3.jpg");
+        background-image: url("../images/lavender_background.jpg");
         min-height: 400px;
     }
 
@@ -102,8 +108,12 @@
     <!-- First Parallax Image with Logo Text -->
     <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
         <div class="w3-display-middle" style="white-space:nowrap;">
-            <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span
-                    class="w3-hide-small">WEBSITE</span> LOGO</span>
+            <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity" style="font-size: 44px!important;">
+                <img src="images/CH_coaching_logo_branding@4x.png" class="w3-round w3-image w3-hover-opacity-off"
+                    alt="CH_coaching_logo_branding" width="100%" height="auto">
+            </span>
+                <!-- MY <span
+                    class="w3-hide-small">WEBSITE</span> LOGO</span> -->
         </div>
     </div>
 
@@ -122,8 +132,8 @@
             laboris nisi ut aliquip ex ea commodo consequat.</p>
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
-                <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-                <img src="/w3images/avatar_hat.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off"
+                <p><b><i class="fa fa-user w3-margin-right"></i>Cory Hardman</b></p><br>
+                <img src="/images/IMG_1758.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off"
                     alt="Photo of Me" width="500" height="333">
             </div>
 
