--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
 
     /* First image (Logo. Full height) */
     .bgimg-1 {
-        background-image: url("../images/lavender_background.jpg");
+        background-image: url("/images/lavender_background.jpg");
         min-height: 100%;
     }
 
     /* Second image (Portfolio) */
     .bgimg-2 {
-        background-image: url("../images/lavender_background.jpg");
+        background-image: url("/images/lavender_background.jpg");
         min-height: 400px;
     }
 
     /* Third image (Contact) */
     .bgimg-3 {
-        background-image: url("../images/lavender_background.jpg");
+        background-image: url("/images/lavender_background.jpg");
         min-height: 400px;
     }
 
