--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     /* Third image (Contact) */
     .bgimg-3 {
-        background-image: url("/images/lavender_background.jpg");
+        background-image: url("images/lavender_background.jpg");
         min-height: 400px;
     }
 
@@ -65,6 +65,15 @@
     .w3-hover-opacity {
         cursor: pointer;
     }
+    /* theme colors */
+    /* 
+    #a1c1a9 green
+    #c1d8eb light blue 
+    #ffb140 orange
+    #6200b3 purple
+    #00487c dark blue 
+    #f5f1e0 eggshell
+    #f0fff1 light green */
 
     /* Turn off parallax scrolling for tablets and phones */
     @media only screen and (max-device-width: 1600px) {
@@ -107,11 +116,11 @@
 
     <!-- First Parallax Image with Logo Text -->
     <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-        <div class="w3-display-middle" style="white-space:nowrap;">
-            <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity" style="font-size: 44px!important;">
-                <img src="images/CH_coaching_logo_branding@4x.png" class="w3-round w3-image w3-hover-opacity-off"
+        <div class="w3-display-middle w3-black" style="white-space:nowrap;">
+            <!-- <span class="w3-center w3-padding-large w3-xlarge w3-wide"> -->
+                <img src="images/CH_coaching_logo_branding@4x.png" class="w3-round w3-image" style="padding: 25px;"
                     alt="CH_coaching_logo_branding" width="100%" height="auto">
-            </span>
+            <!-- </span> -->
                 <!-- MY <span
                     class="w3-hide-small">WEBSITE</span> LOGO</span> -->
         </div>
