--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Cory Hardman Coaching</title>
+<link rel="icon" type="image/x-icon" href="images/CH_coaching_logo_final_favicon_wBground.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -116,29 +117,19 @@
 
     <!-- First Parallax Image with Logo Text -->
     <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-        <div class="w3-display-middle w3-black" style="white-space:nowrap;">
-            <!-- <span class="w3-center w3-padding-large w3-xlarge w3-wide"> -->
-                <img src="images/CH_coaching_logo_branding@4x.png" class="w3-round w3-image" style="padding: 25px;"
-                    alt="CH_coaching_logo_branding" width="100%" height="auto">
-            <!-- </span> -->
-                <!-- MY <span
-                    class="w3-hide-small">WEBSITE</span> LOGO</span> -->
+        <div class="w3-display-middle" style="white-space:nowrap; background-color: white; opacity: 90%;border-radius: 25px;width: 72%;">
+            <div class="w3-center w3-padding-large w3-xlarge w3-wide">
+                <img src="images/CH_coaching_logo_branding@4x.png" class="w3-center w3-image" style="width: 125%;"
+                    alt="CH_coaching_logo_branding">
+            </div>
         </div>
     </div>
 
     <!-- Container (About Section) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
         <h3 class="w3-center">ABOUT ME</h3>
-        <p class="w3-center"><em>I love photography</em></p>
-        <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa
-            qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="w3-center"><em>I love Coaching</em></p>
+        <p>"Stop being a victim of your circumstances! Empower yourself by choosing who you want to be and how you want to show up in life! Start living the life you wish you had and let me help you go from good to great!".</p>
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
                 <p><b><i class="fa fa-user w3-margin-right"></i>Cory Hardman</b></p><br>
@@ -148,17 +139,48 @@
 
             <!-- Hide this text on small devices -->
             <div class="w3-col m6 w3-hide-small w3-padding-large">
-                <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>It is so easy to say, "I am frustrated!" But what does that even feel like or mean? Sometimes it is just something we say out of habit, and not reality.
+I would like to suggest that instead, you stop and tell yourself to take a deep breath and then decide how you feel. It still might be frustrated, but often it is something different. 
+There is power in figuring out your emotions and naming them as you feel them.</p>
             </div>
         </div>
-        <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
+        <br><br><br>
+    </div>
+
+    <!-- Second Parallax Image with Portfolio Text -->
+    <div class="bgimg-2 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle" style="background-color: white; opacity: 60%;padding: 20px; border-radius: 20px;">
+            <span class="w3-xxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">COACHING</span>
+        </div>
+    </div>
+        <!-- About Section -->
+<div class="w3-container" style="padding:128px 16px" id="about">
+  <h3 class="w3-center">ABOUT COACHING</h3>
+  <p class="w3-center w3-large">Coaching can do so many things, here are a few!</p>
+  <div class="w3-row-padding w3-center" style="margin-top:64px">
+    <div class="w3-quarter">
+      <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
+      <p class="w3-large">Empower</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Joy</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Awareness</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Support</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+    </div>
+  </div>
+</div>
+        <!-- <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
         <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
         <div class="w3-light-grey">
             <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
@@ -190,22 +212,18 @@
             <span class="w3-xlarge">150+</span><br>
             Meetings
         </div>
-    </div>
+    </div> -->
 
-    <!-- Second Parallax Image with Portfolio Text -->
-    <div class="bgimg-2 w3-display-container w3-opacity-min">
-        <div class="w3-display-middle">
-            <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
-        </div>
-    </div>
+
 
     <!-- Container (Portfolio Section) -->
     <div class="w3-content w3-container w3-padding-64" id="portfolio">
         <h3 class="w3-center">MY WORK</h3>
-        <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make
-                them bigger</em></p><br>
+        <p class="w3-center"><em>In coaching, we focus on the present and the future, instead of dwelling on the past. We uncover any thoughts you are having, even the ones you weren't aware of, that cause you to feel and act a certain way. When you recognize these thoughts, you can decide if those thoughts are serving you or hurting you and if you want to keep them.
+I create a safe space to sort through your thoughts and be aware of how your thoughts create your feelings. I give you tools to help you take your life from good to great! 
+Want to give it a try?</em></p><br>
 
-        <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+        <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width)
         <div class="w3-row-padding w3-center">
             <div class="w3-col m3">
                 <img src="/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
@@ -247,9 +265,11 @@
             <div class="w3-col m3">
                 <img src="/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
                     alt="Sailing">
-            </div>
-            <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
+            </div> -->
+        <div class="w3-center">   
+            <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px"><a href="#contact" class="w3-button">CONTACT</a></button>
         </div>
+    </div>
     </div>
 
     <!-- Modal for full size images on click-->
@@ -276,18 +296,18 @@
 
         <div class="w3-row w3-padding-32 w3-section">
             <div class="w3-col m4 w3-container">
-                <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
+                <a href="https://goo.gl/maps/Z2GVpd2rYc9iHxY67" title="Location" target="_blank"
+                class="w3-hover-opacity"><img src="images/static_map.php.png" class="w3-image w3-round" style="width:100%"></a>
             </div>
             <div class="w3-col m8 w3-panel">
                 <div class="w3-large w3-margin-bottom">
-                    <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Chicago, US<br>
-                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00
-                    151515<br>
+                    <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Syracuse Utah, US<br>
+                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: (801) 513-3065<br>
                     <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email:
-                    mail@mail.com<br>
+                    cory@coryhardmancoaching.com<br>
                 </div>
-                <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p>
-                <form action="/action_page.php" target="_blank">
+                <!-- <form action="/action_page.php" target="_blank"> -->
+                    <form action="mailto:cory@coryhardmancoaching.com" method="post" enctype="text/plain">
                     <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
                         <div class="w3-half">
                             <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
