--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <!-- First Parallax Image with Logo Text -->
     <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-        <div class="w3-display-middle" style="white-space:nowrap; background-color: white; opacity: 90%;border-radius: 25px;width: 72%;">
+        <div class="w3-display-middle" style="white-space:nowrap; background-color: white; opacity: 90%;border-radius: 25px;width: 60%;">
             <div class="w3-center w3-padding-large w3-xlarge w3-wide">
                 <img src="images/CH_coaching_logo_branding@4x.png" class="w3-center w3-image" style="width: 125%;"
                     alt="CH_coaching_logo_branding">
@@ -133,7 +133,7 @@
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
                 <p><b><i class="fa fa-user w3-margin-right"></i>Cory Hardman</b></p><br>
-                <img src="/images/IMG_1758.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off"
+                <img src="images/IMG_1758.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off"
                     alt="Photo of Me" width="500" height="333">
             </div>
 
@@ -270,7 +270,7 @@ Want to give it a try?</em></p><br>
             <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px"><a href="#contact" class="w3-button">CONTACT</a></button>
         </div>
     </div>
-    </div>
+    
 
     <!-- Modal for full size images on click-->
     <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
@@ -284,8 +284,8 @@ Want to give it a try?</em></p><br>
 
     <!-- Third Parallax Image with Portfolio Text -->
     <div class="bgimg-3 w3-display-container w3-opacity-min">
-        <div class="w3-display-middle">
-            <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
+        <div class="w3-display-middle" style="background-color: white; opacity: 60%;padding: 20px; border-radius: 20px;">
+            <span class="w3-xxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;" >CONTACT</span>
         </div>
     </div>
 
