--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         height: 100%;
         color: #777;
         line-height: 1.8;
+        font-size: 20px;
     }
 
     /* Create a Parallax Effect */
@@ -77,7 +78,7 @@
     #f0fff1 light green */
 
     /* Turn off parallax scrolling for tablets and phones */
-    @media only screen and (max-device-width: 1600px) {
+    @media only screen and (max-device-width: 1200px) {
 
         .bgimg-1,
         .bgimg-2,
@@ -149,7 +150,7 @@ There is power in figuring out your emotions and naming them as you feel them.</
 
     <!-- Second Parallax Image with Portfolio Text -->
     <div class="bgimg-2 w3-display-container w3-opacity-min">
-        <div class="w3-display-middle" style="background-color: white; opacity: 60%;padding: 20px; border-radius: 20px;">
+        <div class="w3-display-middle" style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
             <span class="w3-xxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">COACHING</span>
         </div>
     </div>
