adjusted social media links

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
     html {
         height: 100%;
         color: #777;
-        line-height: 1.8;
+        line-height: 1.5;
         font-size: 20px;
+    }
+    p{    
+        font-size: 28px;
     }
 
     /* Create a Parallax Effect */
@@ -151,7 +154,7 @@ There is power in figuring out your emotions and naming them as you feel them.</
     <!-- Second Parallax Image with Portfolio Text -->
     <div class="bgimg-2 w3-display-container w3-opacity-min">
         <div class="w3-display-middle" style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
-            <span class="w3-xxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">COACHING</span>
+            <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">COACHING</span>
         </div>
     </div>
         <!-- About Section -->
@@ -286,7 +289,7 @@ Want to give it a try?</em></p><br>
     <!-- Third Parallax Image with Portfolio Text -->
     <div class="bgimg-3 w3-display-container w3-opacity-min">
         <div class="w3-display-middle" style="background-color: white; opacity: 60%;padding: 20px; border-radius: 20px;">
-            <span class="w3-xxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;" >CONTACT</span>
+            <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;" >CONTACT</span>
         </div>
     </div>
 
@@ -301,7 +304,7 @@ Want to give it a try?</em></p><br>
                 class="w3-hover-opacity"><img src="images/static_map.php.png" class="w3-image w3-round" style="width:100%"></a>
             </div>
             <div class="w3-col m8 w3-panel">
-                <div class="w3-large w3-margin-bottom">
+                <div class="w3-xlarge w3-margin-bottom">
                     <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Syracuse Utah, US<br>
                     <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: (801) 513-3065<br>
                     <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email:
@@ -330,12 +333,8 @@ Want to give it a try?</em></p><br>
     <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
         <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
         <div class="w3-xlarge w3-section">
-            <i class="fa fa-facebook-official w3-hover-opacity"></i>
-            <i class="fa fa-instagram w3-hover-opacity"></i>
-            <i class="fa fa-snapchat w3-hover-opacity"></i>
-            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-            <i class="fa fa-twitter w3-hover-opacity"></i>
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
+            <a href="https://www.facebook.com/coryhardmancoaching/" title="Cory Hardman Coaching Facebook" target="_blank" ><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+            <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram" target="_blank" ><i class="fa fa-instagram w3-hover-opacity"></i></a>
         </div>
         <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
                 class="w3-hover-text-green">w3.css</a></p>
