--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- Navbar (sit on top) -->
-    <header w3-include-html="header.html"></header>
+    <div w3-include-html="header.html"></div>
 
     <!-- First Parallax Image with Logo Text -->
     <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
@@ -100,6 +100,15 @@
     </footer>
 
     <script type="module" src="module.js">
+       // Used to toggle the menu on small screens when clicking on the menu button
+       function toggleFunction() {
+       var x = document.getElementById("navDemo");
+       if (x.className.indexOf("w3-show") == -1) {
+       x.className += " w3-show";
+       } else {
+       x.className = x.className.replace(" w3-show", "");
+       }
+       }
     </script>
 
 </body>
