--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
      <header w3-include-html="header.html"></header>
 
     <!-- First Parallax Image with Logo Text -->
-    <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+    <div class="about-bgimg w3-display-container w3-opacity-min" id="home">
         <div class="w3-display-middle"
             style="white-space:nowrap; background-color: white; opacity: 90%;border-radius: 25px;width: 50%;">
             <div class="w3-center w3-padding-large w3-xlarge w3-wide">
