adjustments on learn more page

--- a/learnmore.html
+++ b/learnmore.html
@@ -29,52 +29,53 @@
         </div>
     </div>
 
-           <div class="w3-row w3-center w3-dark-grey w3-padding-16">
     <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-        <h3 class="w3-center w3-xxlarge">Does this sound like you?</h3>
-        <div class="w3-row-padding w3-section">
-            <span class="w3-xlarge">You are a mother of a teen or young adult</span>
-        </div>
-        <div class="w3-row-padding w3-section">
-            <span class="w3-xlarge">Your teen suffers from depression and/or anxiety</span>
-        </div>
-        <div class="w3-row-padding w3-section">
-            <span class="w3-xlarge">Your teen's choices are making you upset</span>
-        </div>
-        <div class="w3-row-padding w3-section">
-            <span class="w3-xlarge">You have guilt for the choices your teen is making</span>
-        </div>
-        <div class="w3-row-padding w3-section">
-            <span class="w3-xlarge">You want a better relationship with your teen</span>
-        </div>
-        <div class="w3-row-padding w3-section">
-            <span class="w3-xlarge">You find all the things you are doing wrong as a mom</span>
-        </div>
-        <div class="w3-row-padding w3-section">
-            <span class="w3-xlarge">You beat yourself up for the things you didn't do right</span>
-        </div>
+        <div class="w3-row w3-center w3-dark-grey w3-padding-16">
+            <h3 class="w3-center w3-xxlarge">Does this sound like you?</h3>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You are a mother of a teen or young adult</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">Your teen suffers from depression and/or anxiety</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">Your teen's choices are making you upset</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You have guilt for the choices your teen is making</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You want a better relationship with your teen</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You find all the things you are doing wrong as a mom</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You beat yourself up for the things you didn't do right</span>
+            </div>
 
-        <div class="w3-row-padding w3-section">
-            <span class="w3-xlarge">You feel powerless and hopeless that things will ever be different</span>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You feel powerless and hopeless that things will ever be different</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You worry about your teens future</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You often regret the way you handle problems with your teen</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You feel judged by others for your teens actions</span>
+            </div>
         </div>
-        <div class="w3-row-padding w3-section">
-            <span class="w3-xlarge">You worry about your teens future</span>
-        </div>
-        <div class="w3-row-padding w3-section">
-            <span class="w3-xlarge">You often regret the way you handle problems with your teen</span>
-        </div>
-        <div class="w3-row-padding w3-section">
-            <span class="w3-xlarge">You feel judged by others for your teens actions</span>
-        </div>
-    </div>
     </div>
     <!-- second Parallax Image with Portfolio Text -->
     <div class="w3-center bgimg-2 w3-display-container w3-opacity-min">
         <div class="w3-display-middle">
-            <span class="w3-xxxlarge w3-hover-opacity-off w3-wide"></span>
-            <div class="w3-display-middle"
+            <span class="w3-xxlarge w3-hover-opacity-off w3-wide"></span>
+            <div class=""
                 style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
-                <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">WE TELL OURSELVES</span>
+                <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">THERE IS NOTHING WRONG
+                    WITH YOU</span>
             </div>
         </div>
     </div>
@@ -82,7 +83,7 @@
 
     <!-- Container (hero Coaching) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
-        <h3 class="w3-center">Not the Exception</h3>
+        <h3 class="w3-center">You are not the exception</h3>
         <div class="w3-col m6 w3-right w3-padding-large">
             <p>I am here to tell you that you are not the exception. You are experiencing a human life and there is
                 nothing wrong with you. You just haven't learned what you really need to know yet. The great news is
@@ -108,20 +109,23 @@
             <span class="w3-xxxlarge w3-hover-opacity-off w3-wide"></span>
             <div class="w3-display-middle"
                 style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
-                <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">LOOK FORWARD</span>
+                <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">FUTURE YOU</span>
             </div>
         </div>
     </div>
     <!-- What is coaching Section -->
+    <div class="w3-row w3-center w3-dark-grey w3-padding-16">
         <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-                   <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-            <h3 class="w3-center w3-xxlarge">Future You</h3>
-            <h4 class="w3-center w3-xxlarge">Who you will become</h4>
-            <div class="w3-row-padding w3-section">
-                <span class="w3-xlarge">You will love your parenting choices</span>
-            </div>
+            <h3 class="w3-center w3-xxlarge">Who you will become</h3>
+
             <div class="w3-row-padding w3-section">
                 <span class="w3-xlarge">You will stop feeling guilty for everything your teen does</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You will show up during conflict without being angry</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You will love your parenting choices</span>
             </div>
             <div class="w3-row-padding w3-section">
                 <span class="w3-xlarge">You will stop judging yourself</span>
@@ -130,16 +134,13 @@
                 <span class="w3-xlarge">You will feel confident as a parent</span>
             </div>
             <div class="w3-row-padding w3-section">
-                <span class="w3-xlarge">You will feel confident as a parent</span>
-            </div>
-            <div class="w3-row-padding w3-section">
                 <span class="w3-xlarge">You will stop blaming yourself</span>
             </div>
             <div class="w3-row-padding w3-section">
-                <span class="w3-xlarge">You will show up during conflict without being angry</span>
+                <span class="w3-xlarge">You will find self love</span>
             </div>
         </div>
-        </div>
+    </div>
     <div class="w3-content w3-container w3-padding-64">
         <div class="w3-center">
             <div class="w3-padding-16 w3-row w3-margin">
