--- a/learnmore.html
+++ b/learnmore.html
@@ -42,6 +42,9 @@
                 <span class="w3-xlarge">Your teen's choices are making you upset</span>
             </div>
             <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You worry about your teens future</span>
+            </div>
+            <div class="w3-row-padding w3-section">
                 <span class="w3-xlarge">You have guilt for the choices your teen is making</span>
             </div>
             <div class="w3-row-padding w3-section">
@@ -53,27 +56,23 @@
             <div class="w3-row-padding w3-section">
                 <span class="w3-xlarge">You beat yourself up for the things you didn't do right</span>
             </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">You feel judged by others for your teens actions</span>
+            </div>
 
             <div class="w3-row-padding w3-section">
-                <span class="w3-xlarge">You feel powerless and hopeless that things will ever be different</span>
-            </div>
-            <div class="w3-row-padding w3-section">
-                <span class="w3-xlarge">You worry about your teens future</span>
+                <span class="w3-xlarge">You feel powerless and hopeless that things will be different</span>
             </div>
             <div class="w3-row-padding w3-section">
                 <span class="w3-xlarge">You often regret the way you handle problems with your teen</span>
-            </div>
-            <div class="w3-row-padding w3-section">
-                <span class="w3-xlarge">You feel judged by others for your teens actions</span>
             </div>
         </div>
     </div>
     <!-- second Parallax Image with Portfolio Text -->
     <div class="w3-center bgimg-2 w3-display-container w3-opacity-min">
         <div class="w3-display-middle">
-            <span class="w3-xxlarge w3-hover-opacity-off w3-wide"></span>
-            <div class=""
-                style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
+            <span class="w3-xxxlarge w3-hover-opacity-off w3-wide"></span>
+            <div class="" style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
                 <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">THERE IS NOTHING WRONG
                     WITH YOU</span>
             </div>
@@ -107,8 +106,7 @@
     <div class="w3-center bgimg-3 w3-display-container w3-opacity-min">
         <div class="w3-display-middle">
             <span class="w3-xxxlarge w3-hover-opacity-off w3-wide"></span>
-            <div class="w3-display-middle"
-                style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
+            <div style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
                 <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">FUTURE YOU</span>
             </div>
         </div>
