--- a/index.html
+++ b/index.html
@@ -31,27 +31,20 @@
 
     <!-- Container (hero Coaching) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
-        <h3 class="w3-center">I love Coaching</h3>
-        <div class="w3-col m6 w3-right w3-padding-large">
-            <p>"Stop being a victim of your circumstances! Empower yourself by choosing who you want to be and how you
+        <h3 class="w3-center">I help mom's of teens gain confidence in their parenting skills</h3>
+        <div class="w3-col w3-padding-large">
+            <p>Stop being a victim of your circumstances! Empower yourself by choosing who you want to be and how you
                 want
-                to show up in life! Start living the life you wish you had and let me help you go from good to great!".
+                to show up as a mother! Start living the life you wish you had and let me help your relationship with your teen go from good to great!.
             </p>
 
-            <p>It is so easy to say, "I am frustrated!" But what does that even feel like or mean? Sometimes it is
-                just something we say out of habit, and not reality.
-                I would like to suggest that instead, you stop and tell yourself to take a deep breath and then
-                decide how you feel. It still might be frustrated, but often it is something different.
-                There is power in figuring out your emotions and naming them as you feel them.</p>
+            <p>Life coach for LDS moms of teens who feel like they are failing as a parent, feel guilty and who are
+                worried about messing up their children. I help you feel peace, acceptance, and love for yourself and
+                your children, regardless of their actions. I teach you tools to gain confidence in your parenting
+                skills and the decisions you make. It's time to stop blaming yourself!</p>
         </div>
 
-        <div class="">
-            <div class="w3-col m6 w3-center w3-padding-large">
-                <p><b><i class="fa fa-user w3-margin-right"></i>Cory Hardman</b></p><br>
-                <img src="images/portraits/cory_hardman_portrait-6.jpg" class="w3-card w3-round w3-image"
-                    alt="Photo of Me" width="500" height="333">
-            </div>
-        </div>
+       
     </div>
 
     <!-- Second Parallax Image with Portfolio Text -->
@@ -64,7 +57,7 @@
     <!-- What is coaching Section -->
     <div class="w3-content w3-container w3-padding-64">
         <h3 class="w3-center">Empowerment</h3>
-
+ <div class="w3-col m6 w3-right w3-padding-large">
         <p>In coaching, we focus on the present and the future, instead of dwelling on the past.
             We uncover any thoughts you are having, even the ones you weren't aware of, that cause you to feel and
             act a certain way. When you recognize these thoughts, you can decide if those thoughts are serving you
@@ -72,7 +65,15 @@
             I create a safe space to sort through your thoughts and be aware of how your thoughts create your
             feelings. I give you tools to help you take your life from good to great!
             Want to give it a try?</p>
-
+            </div>
+ <div class="">
+     <div class="w3-col m6 w3-center w3-padding-large">
+         <p><b><i class="fa fa-user w3-margin-right"></i>Cory Hardman</b></p><br>
+         <img src="images/portraits/cory_hardman_portrait-6.jpg" class="w3-card w3-round w3-image" alt="Photo of Me"
+             width="500" height="333">
+     </div>
+     
+ </div>
         <div class="w3-center">
             <div class="w3-padding-16 w3-row w3-margin">
                 <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
