--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- Navbar (sit on top) -->
-     <header w3-include-html="header.html"></header>
+    <header w3-include-html="header.html"></header>
 
     <!-- First Parallax Image with Logo Text -->
     <div class="about-bgimg w3-display-container w3-opacity-min" id="home">
@@ -35,23 +35,23 @@
             <p>I am a mother or 3, a member of The Church of Jesus Christ of Latter Day Saints and a woman trying to
                 navigate this world of emotions that are constantly changing.</p>
 
-              <p>  Many years ago, as my young children became teenagers, I found myself taking on their problems and
+            <p> Many years ago, as my young children became teenagers, I found myself taking on their problems and
                 concerns as my own. I thought all of their feelings, actions, and decisions were a direct reflection of
                 me and the way I raised them. This brought so much unnecessary pain and guilt for me. I lived in a world
                 of constant guilt and regrets of what I should have done differently and how I was failing as a mother.
                 My physical health suffered, my emotional health suffered, my spiritual health suffered, and my family
                 relationships suffered.</p>
 
-              <p>  Fast forward 8 years. I am now raising 2 young adult children as well as a teenager. Coaching has helped
+            <p> Fast forward 8 years. I am now raising 2 young adult children as well as a teenager. Coaching has helped
                 me become the mother I want to be and show up in the ways I want to show up regardless of the actions of
                 those around me. I have learned that I can choose to love my children, but not their choices. Their
                 emotions, decisions, and actions are not a reflection of me or my parenting skills, but of them using
                 their agency the way the choose. What a blessing that God has given all of us agency and we are the only
-                ones that can choose the way we want to live our life!</p> </div>
+                ones that can choose the way we want to live our life!</p>
+        </div>
 
         <div class="">
             <div class="w3-col m6 w3-center w3-padding-large">
-                <p><b><i class="fa fa-user w3-margin-right"></i>Cory Hardman</b></p><br>
                 <img src="images/portraits/cory_hardman_portrait-2.jpg" class="w3-card w3-round w3-image"
                     alt="Photo of Me" width="500" height="333">
             </div>
@@ -65,35 +65,37 @@
             <div class="w3-display-middle"
                 style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
                 <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">COACHING HELPS</span>
+            </div>
         </div>
     </div>
-    </div>
-  <!-- What is coaching Section -->
-  <div class="w3-content w3-container w3-padding-64">
-      <div class="w3-center">
-      <h3 class="w3-center">Coaching Can</h3>
+    <!-- What is coaching Section -->
+    <div class="w3-content w3-container w3-padding-64">
+        <div class="w3-center">
+            <h3 class="w3-center">Coaching Can</h3>
 
-      <p>I can help you recognize the underlying problems and give you the tools to choose how you want to show up as a
-          mom, a wife, and a daughter of God. You can choose the mother you want to be regardless of your children's
-          actions or feelings!</p>
-</div>
-      <div class="w3-center">
-          <div class="w3-padding-16 w3-row w3-margin">
-              <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
-                  style="background-color: #6200b3!important;"><a href="contact.html" class="w3-button button-hover"
-                      style="background-color: #6200b3!important;
+            <p>I can help you recognize the underlying problems and give you the tools to choose how you want to show up
+                as a
+                mom, a wife, and a daughter of God. You can choose the mother you want to be regardless of your
+                children's
+                actions or feelings!</p>
+        </div>
+        <div class="w3-center">
+            <div class="w3-padding-16 w3-row w3-margin">
+                <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
+                    style="background-color: #6200b3!important;"><a href="contact.html" class="w3-button button-hover"
+                        style="background-color: #6200b3!important;
                         color:white;">WORK WITH ME</a></button>
 
-              <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
-                  style="background-color: #6200b3!important;"><a href="about.html" class="w3-button button-hover"
-                      style="background-color: #6200b3!important;
+                <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
+                    style="background-color: #6200b3!important;"><a href="about.html" class="w3-button button-hover"
+                        style="background-color: #6200b3!important;
                         color:white;">LEARN MORE</a></button>
-          </div>
-      </div>
-  </div>
+            </div>
+        </div>
+    </div>
     <!-- Footer -->
-     <footer w3-include-html="footer.html">
-     </footer>
+    <footer w3-include-html="footer.html">
+    </footer>
 
     <script type="module" src="module.js">
 
