--- a/learnmore.html
+++ b/learnmore.html
@@ -19,7 +19,7 @@
     <header w3-include-html="header.html"></header>
 
     <!-- First Parallax Image with Logo Text -->
-    <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+    <div class="learnmore-bgimg w3-display-container w3-opacity-min" id="home">
         <div class="w3-display-middle"
             style="white-space:nowrap; background-color: white; opacity: 90%;border-radius: 25px;width: 50%;">
             <div class="w3-center w3-padding-large w3-xlarge w3-wide">
@@ -96,7 +96,6 @@
 
         <div class="">
             <div class="w3-col m6 w3-center w3-padding-large">
-                <!-- <p><b><i class="fa fa-user w3-margin-right"></i>Cory Hardman</b></p><br> -->
                 <img src="images/portraits/cory_hardman_portrait-5.jpg" class="w3-card w3-round w3-image"
                     alt="Photo of Me" width="500" height="333">
             </div>
