--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
                 me become the mother I want to be and show up in the ways I want to show up regardless of the actions of
                 those around me. I have learned that I can choose to love my children, but not their choices. Their
                 emotions, decisions, and actions are not a reflection of me or my parenting skills, but of them using
-                their agency the way the choose. What a blessing that God has given all of us agency and we are the only
-                ones that can choose the way we want to live our life!</p>
+                their agency the way the choose. We are blessed that God has given all of us agency. We are the only
+                ones that can choose the way we feel and the way we live our life!</p>
         </div>
 
         <div class="">
@@ -64,20 +64,18 @@
             <span class="w3-xxxlarge w3-hover-opacity-off w3-wide"></span>
             <div class="w3-display-middle"
                 style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
-                <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">COACHING HELPS</span>
+                <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">LOVE IS AN OPTION</span>
             </div>
         </div>
     </div>
     <!-- What is coaching Section -->
     <div class="w3-content w3-container w3-padding-64">
         <div class="w3-center">
-            <h3 class="w3-center">Coaching Can</h3>
+            <h3 class="w3-center">Choose How You Show Up</h3>
 
-            <p>I can help you recognize the underlying problems and give you the tools to choose how you want to show up
-                as a
-                mom, a wife, and a daughter of God. You can choose the mother you want to be regardless of your
-                children's
-                actions or feelings!</p>
+            <p>I help you recognize the underlying problems and give you the tools to choose how you want to show up
+                as a mom, a wife, and a daughter of God. You can choose the mother you want to be regardless of your
+                children's actions or feelings!</p>
         </div>
         <div class="w3-center">
             <div class="w3-padding-16 w3-row w3-margin">
