--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <!-- What is coaching Section -->
     <div class="w3-content w3-container w3-padding-64">
         <h3 class="w3-center">Empowerment</h3>
+       <div class="w3-container">
         <div class="w3-col m6 w3-right w3-padding-large">
             <p>In coaching, we focus on the present and the future, instead of dwelling on the past.
                 We uncover any thoughts you are having, even the ones you weren't aware of, that cause you to feel and
@@ -72,7 +73,7 @@
                 <img src="images/portraits/cory_hardman_portrait-6.jpg" class="w3-card w3-round w3-image"
                     alt="Photo of Me" width="500" height="333">
             </div>
-
+        </div>
         </div>
         <div class="w3-center">
             <div class="w3-padding-16 w3-row w3-margin">
