--- a/learnmore.html
+++ b/learnmore.html
@@ -31,7 +31,7 @@
 
     <div class="w3-row w3-center w3-dark-grey w3-padding-16">
         <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-            <h3 class="w3-center w3-xxlarge">Does this sound like you?</h3>
+            <h3 class="w3-center w3-xxlarge" style="color: #ffb140!important;">Does this sound like you?</h3>
             <div class="w3-row-padding w3-section">
                 <span class="w3-xlarge">You are a mother of a teen or young adult</span>
             </div>
@@ -40,6 +40,9 @@
             </div>
             <div class="w3-row-padding w3-section">
                 <span class="w3-xlarge">Your teen's choices are making you upset</span>
+            </div>
+            <div class="w3-row-padding w3-section">
+                <span class="w3-xlarge">Your teen has adictive behaviors</span>
             </div>
             <div class="w3-row-padding w3-section">
                 <span class="w3-xlarge">You worry about your teens future</span>
@@ -82,7 +85,7 @@
 
     <!-- Container (hero Coaching) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
-        <h3 class="w3-center">You are not the exception</h3>
+        <h3 class="w3-center" style="color: #ffb140!important;">You are not the exception</h3>
         <div class="w3-col m6 w3-right w3-padding-large">
             <p>I am here to tell you that you are not the exception. You are experiencing a human life and there is
                 nothing wrong with you. You just haven't learned what you really need to know yet. The great news is
@@ -113,7 +116,7 @@
     <!-- What is coaching Section -->
     <div class="w3-row w3-center w3-dark-grey w3-padding-16">
         <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-            <h3 class="w3-center w3-xxlarge">Who you will become</h3>
+            <h3 class="w3-center w3-xxlarge" style="color: #ffb140!important;">Who you will become</h3>
 
             <div class="w3-row-padding w3-section">
                 <span class="w3-xlarge">You will stop feeling guilty for everything your teen does</span>
