--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         <!-- Contact Section -->
         <div class="w3-content w3-container w3-padding-64">
             <h3 class="w3-center">Conatct Me</h3>
-            <p class="w3-center"><em>I'd love your feedback!</em></p>
+            <!-- <p class="w3-center"><em>I'd love your feedback!</em></p> -->
 
             <div class="w3-row w3-padding-32 w3-section">
                 <div class="w3-col m4 w3-container">
@@ -84,12 +84,20 @@
                                 <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
                             </div>
                         </div>
+                    </div>
                         <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
                         <button class="w3-button w3-black w3-right w3-section" type="submit">
                             <i class="fa fa-paper-plane"></i> SEND MESSAGE
                         </button>
                     </form>
-                </div>
+                  <!-- Calendly inline widget begin -->
+                  <div class="calendly-inline-widget"
+                      data-url="https://calendly.com/cory-hardman/30-minute-1-1-coaching-session"
+                      style="min-width:320px;height:630px;"></div>
+                  <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async>
+                  </script>
+                  <!-- Calendly inline widget end -->
+                
             </div>
         </div>
     </div>
