--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
         <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
         <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
             CONTACT ME</a>
-        <a href="contact.html" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity"
+        <a href="contact.html" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
             style="background-color: #6200b3!important;
                         color:white;">
            START NOW
@@ -22,7 +22,10 @@
         <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
         <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
         <a href="contact.html" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT ME</a>
-        <a href="#" class="w3-bar-item w3-button">SIGN UP</a>
+        <a href="contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
+                        color:white;">
+            START NOW
+        </a>
     </div>
 </div>
 </body>
